--- a/Recipe-Finder/src/index.css
+++ b/Recipe-Finder/src/index.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-
+  box-sizing: border-box;
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -18,4 +18,10 @@ body {
 }
 a {
   text-decoration: none;
+}
+html {
+  background-image: url("src/assets/images/pattern-squiggle-1.svg");
+  background-repeat: repeat;
+  background-size: cover; /* ili cover */
+  background-position: center 30%;
 }
